#791: add file update for variables